--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 *.iml
 .gradle
-.idea
-.idea/misc.xml
 /local.properties
+/.idea
+/.idea/misc.xml
 /.idea/caches
 /.idea/libraries
 /.idea/modules.xml
